# FlowDoc

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: eval.yaml  integration.yaml  vlm.yaml
docs/: address_error_plan.md  autodl_qwen_vl_runbook.md  engineering_roadmap.md  experiment_report.md  final_project_summary.md  interview_qa.md  lora_sft_plan.md  postprocessing_design.md  resume_bullets.md  roi_and_deployment_notes.md  sroie_benchmark_report.md  sroie_data_format.md
outputs/error_cases/: analysis_report.md
scripts/: analyze_sroie_errors.py  build_instruction_data.py  check_sft_readiness.py  check_vlm_env.py  compare_baselines.py  demo_workflow_integration.py  evaluate_cleaned_predictions.py  export_error_cases.py  postprocess_predictions.py  prepare_mock_data.py  prepare_real_data.py  prepare_sroie_data.py  report_benchmark.py  run_field_eval.py  run_vlm_baseline.py  split_instruction_data.py  train_qwen_vl_lora.py
src/: __init__.py
tests/: test_analyze_sroie_errors.py  test_benchmark_report.py  test_error_analysis.py  test_evaluate_cleaned_predictions.py  test_field_cleaner.py  test_field_eval_cli.py  test_field_metrics.py  test_instruction_builder.py  test_mock_docs.py  test_ocr_baseline.py  test_postprocess_predictions.py  test_prediction_postprocess.py  test_qwen_runner_graceful_skip.py  test_real_data_adapters.py  test_relaxed_field_metrics.py  test_schema.py  test_sft_readiness.py  test_split_instruction_data.py  test_train_qwen_vl_lora.py  test_vlm_baseline.py  test_vlm_env_check.py  test_vlm_runner.py  test_workflow_export.py
(+30 files in other folders)
